[workspace]
members = [
  # CI benchmarks
  "ci-bench",
  # Tests that require OpenSSL
  "openssl-tests",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
  # example of custom provider
  "provider-example",
  # AuthKEM provider
  "authkem-crypto-provider",
]
default-members = [
  "examples",
  "rustls",
  "authkem-crypto-provider",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
# rustls-pki-types = { path = "../rustls-pki-types" }
rustls-pki-types = { git = "https://github.com/kemtls/rustls-pki-types.git", branch = "authkem" }