[package]
name = "authkem-crypto-provider"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Provider for AuthKEM cryptography"
publish = false

[dependencies]
der = "0.7"
ecdsa = "0.16.8"
hmac = "0.12"
hpke = "0.11"
p256 = { version = "0.13.2", default-features = false, features = ["alloc", "ecdsa", "ecdh", "pkcs8"] }
pkcs8 = "0.10.2"
pki-types = { package = "rustls-pki-types", version = "1" }
rand_core = { version = "0.6", features = ["getrandom"] }
rustls = { path = "../rustls", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rsa = { version = "0.9", features = ["sha2"], default-features = false }
sha2 = { version = "0.10", default-features = false }
signature = "2"
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
x25519-dalek = {version = "2", features = ["static_secrets"]}
rand = "*"
spki = "*"

[dev-dependencies]
env_logger = "0.10" # 0.11 requires 1.71 MSRV even as a dev-dep (due to manifest features)
hex = "0.4.3"
rcgen = { version = "0.12", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webpki-roots = "0.26"

[features]
default = ["std"]
std = ["pkcs8/std"]
